# C-Snake-Game

./: .gitmodules  CMakeLists.txt  README.md
doc/: .gitignore  Doxyfile
spike/C/: CMakeLists.txt  c_2d_array.c  c_hello.c
src/: CMakeLists.txt  main.c
src/snake_game_manager/: CMakeLists.txt  enum_priv.h  snake_game_manager.c  snake_game_manager.h  snake_game_manager_priv.h  snake_part_priv.h
test/: CMakeLists.txt  main.c  snake_gameplay_stress_tests.c  snake_gameplay_tests.c  test_factorial.c
